Module creation and templates adjusted

--- a/modules/01_introduction/main.tex
+++ b/modules/01_introduction/main.tex
@@ -1,6 +1,6 @@
 % Genomes Workflow Module Template - LBCM UFRGS
 % Based on NotesTeX and Gilles Castel's aesthetic approach
-% Module: MODULE_NAME_PLACEHOLDER
+% Module: 01 - Introduction
 % Date: DATE_PLACEHOLDER
 
 \documentclass[a4paper,11pt]{article}
@@ -12,9 +12,9 @@
     \vfill
     \textcolor{noteblue}{\Huge Genomes Workflow - LBCM}\\
     \vspace{5.0cm}
-    \textcolor{sidenotegray}{\huge MODULE_NAME_PLACEHOLDER}\\
+    \textcolor{sidenotegray}{\huge 01 - Introduction}\\
     \vspace{1.5cm}
-    \textcolor{sidenotegray}{\LARGE MODULE_SUBTITLE_PLACEHOLDER}\\
+    \textcolor{sidenotegray}{\LARGE General guidelines}\\
     \vspace{5.0cm}
     \textcolor{sidenotegray}{\large \today}
     \vfill
