--- a/modules/01_introduction/preamble.tex
+++ b/modules/01_introduction/preamble.tex
@@ -112,7 +112,7 @@
 \setlength{\headheight}{14pt}
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{\textcolor{noteblue}{\textbf{MODULE_NAME_PLACEHOLDER}}}
+\fancyhead[L]{\textcolor{noteblue}{\textbf{01 - Introduction}}}
 \fancyhead[R]{\textcolor{noteblue}{\today}}
 \fancyfoot[C]{\textcolor{noteblue}{\thepage}}
 \renewcommand{\headrulewidth}{0.5pt}
