01_introduction on work

--- a/modules/01_introduction/main.tex
+++ b/modules/01_introduction/main.tex
@@ -35,26 +35,26 @@
 
 This module covers:
 \begin{itemize}
-    \item Main concept or tool introduction
-    \item Practical applications in genomics
-    \item Best practices and common pitfalls
+    \item Repository organization.
+    \item Available scripts.
+    \item General pipeline structure.
+    \item Modules organization.
 \end{itemize}
 
-\section{Background \& Theory}
+\section{Background}
 
-\subsection{Biological Context}
+\subsection{General Context}
 \sn{Why this matters}
 
 Key concepts:
 \begin{itemize}
-    \item Important biological principle \cite{example2024}
-    \item Computational approach \citep{author2024}
-    \item Related methods \citet{smith2024}
+    \item The integration between biological knowledge and IT or
+        bioinformatics tools can be harsh.
+    \item The presence and interference of multiple key concepts of each area
+        creates a big wall on newcomers.
+    \item Explain key features and provide support in a organized way can help
+        to circumvent this initial barrier.
 \end{itemize}
-
-\begin{definition}
-Key term or concept definition from \cite{author2024}.
-\end{definition}
 
 \section{Tools \& Software}
 
