Module 00 pdf up-to-date

--- a/modules/00_introduction/main.tex
+++ b/modules/00_introduction/main.tex
@@ -114,7 +114,7 @@ genomes_workflow_lbcm_ufrgs
         and interaction.
 \end{itemize}
 \subsection{General pipeline structure}
-#WORK IN DEVELOPMENT
+WORK IN DEVELOPMENT
 \subsection{Modules organization}
 \begin{description}
     \item[00 - Introduction] - Similar to the main README.md file, this module
