00 Introduction: Update main.tex and main.pdf

--- a/modules/00_introduction/main.tex
+++ b/modules/00_introduction/main.tex
@@ -125,7 +125,7 @@ WORK IN DEVELOPMENT
         presents a short introduction to Linux logic and terminal usage, as well
         as conda environment creation and logic. Lastly approaches some good
         practices on workflow organization.
-\end{{description}
+\end{description}
 \section{Best Practices}
 \begin{itemize}
     \item \textbf{Data backup:} Always keep original data copies, especially
