Adjusted for biber integration

--- a/global/templates/preamble_template.tex
+++ b/global/templates/preamble_template.tex
@@ -40,8 +40,7 @@
 \usepackage[style=authoryear,backend=biber,natbib=true]{biblatex}
 
 % Add bibliography resources (notes can reference paper's bibliography)
-\addbibresource{../references.bib}
-\addbibresource{../../../global/bibliography/master.bib}
+\addbibresource{references.bib}
 
 % NOTES-SPECIFIC COLORS
 \usepackage{xcolor}
