Adjusted for biber correct support

--- a/modules/01_general_guidelines/main.tex
+++ b/modules/01_general_guidelines/main.tex
@@ -37,6 +37,7 @@
 This module covers:
 \begin{itemize}
     \item Basic Linux terminal concepts and usage.
+    \item What is git and basic usage.
     \item Conda environment logic.
     \item Conda basic usage.
     \item Recommended bioinformatics project organization.
@@ -193,12 +194,6 @@ quality_assessment_tool $INPUT_FILE --output qc_report.html
     \item \textbf{Documentation:} Record all analysis steps and decisions
     \item \textbf{Reproducibility:} Use consistent environments and seeds
 \end{itemize}
-
-\begin{references}
-    \item Key papers: \cite{example2024,author2024,smith2024}
-    \item Software documentation: [Tool official docs]
-    \item Related modules: [Other workflow modules]
-\end{references}
 
 \section{Exercises \& Next Steps}
 
