--- a/modules/01_general_guidelines/preamble.tex
+++ b/modules/01_general_guidelines/preamble.tex
@@ -8,7 +8,9 @@
 \usepackage{lmodern}
 \usepackage{microtype}
 \usepackage[english]{babel}
+\usepackage{setspace}
 
+\onehalfspacing  % Default spacing for notes
 % WIDE MARGINS FOR SIDENOTES (Notes-specific feature)
 \usepackage[
     left=2cm,
