--- a/modules/01_general_guidelines/references.bib
+++ b/modules/01_general_guidelines/references.bib
@@ -47,3 +47,14 @@
   langid = {english},
   file = {/home/leveduras/Zotero/storage/MFW4K3YA/TLCL-24.11.pdf}
 }
+
+@misc{WhatLinux2025,
+  title = {What Is {{Linux}}},
+  author = {Linux},
+  year = {2025},
+  month = jan,
+  journal = {Linux},
+  urldate = {2025-01-16},
+  howpublished = {https://www.linux.com/what-is-linux/},
+  langid = {english}
+}
