Linux chapter semi-finished

--- a/global/templates/preamble_template.tex
+++ b/global/templates/preamble_template.tex
@@ -99,6 +99,17 @@
     fonttitle=\bfseries
 }
 
+\newtcolorbox{tipbox}{
+    colback=yellow!10!white,
+    colframe=orange!80!black,
+    title=Tip,
+    fonttitle=\bfseries,
+    sharp corners,
+    boxrule=1pt
+}
+
+
+
 % SIDENOTES (Notes-specific feature)
 \usepackage{marginnote}
 \renewcommand*{\marginfont}{\footnotesize\color{sidenotegray}}
