--- a/modules/01_general_guidelines/references.bib
+++ b/modules/01_general_guidelines/references.bib
@@ -13,6 +13,17 @@
   file = {/home/leveduras/Zotero/storage/8YX6B5QU/intro-linux.pdf}
 }
 
+@misc{linuxWhatLinux2025,
+  title = {What Is {{Linux}}},
+  author = {Linux},
+  year = {2025},
+  month = jan,
+  journal = {Linux},
+  urldate = {2025-01-16},
+  howpublished = {https://www.linux.com/what-is-linux/},
+  langid = {english}
+}
+
 @misc{mintInstallationGuide2024,
   title = {Installation {{Guide}}},
   author = {Mint, Linux},
@@ -22,6 +33,18 @@
   urldate = {2025-07-01},
   langid = {english},
   file = {/home/leveduras/Zotero/storage/A6JR7PGC/Installation Guide.pdf}
+}
+
+@misc{mintLinuxMintDocumentation2025,
+  title = {Linux {{Mint Documentation}}},
+  shorttitle = {Documentation},
+  author = {Mint, Linux},
+  year = {2025},
+  month = jan,
+  journal = {Documentation},
+  urldate = {2025-07-01},
+  howpublished = {https://www.linuxmint.com/documentation.php},
+  langid = {english}
 }
 
 @misc{mintUserGuideLinux2024,
@@ -46,15 +69,4 @@
   urldate = {2025-07-01},
   langid = {english},
   file = {/home/leveduras/Zotero/storage/MFW4K3YA/TLCL-24.11.pdf}
-}
-
-@misc{WhatLinux2025,
-  title = {What Is {{Linux}}},
-  author = {Linux},
-  year = {2025},
-  month = jan,
-  journal = {Linux},
-  urldate = {2025-01-16},
-  howpublished = {https://www.linux.com/what-is-linux/},
-  langid = {english}
 }
